@@ -47,7 +47,7 @@ int	IsosurfVolume(PyMOLGlobals *G,CSetting *set1,CSetting *set2,
 
 int IsosurfGetRange(PyMOLGlobals *G,Isofield *field,CCrystal *cryst,
                      float *mn,float *mx,int *range,int clamp);
-void IsosurfExpand(Isofield *field1, Isofield *field2,
+int IsosurfExpand(Isofield *field1, Isofield *field2,
                    CCrystal *cryst, CSymmetry *sym, int *range);
 
 int	IsosurfInit(PyMOLGlobals *G);
