@@ -412,12 +412,16 @@ int ExecutiveIsomeshEtc(PyMOLGlobals *G,
         PRINTFB(G,FB_CCmd,FB_Blather)
           " Isomesh: buffer %8.3f carve %8.3f \n",fbuf,carve
           ENDFB(G);
-        if(sele_obj && (sele_obj->Symmetry) && ObjectMapValidXtal(mapObj,state)) {
+        if(sele_obj && SettingGet_b(G,NULL,sele_obj->Obj.Setting,cSetting_map_auto_expand_sym) &&
+           (sele_obj->Symmetry) && ObjectMapValidXtal(mapObj,state)) { 
           obj=(CObject*)ObjectMeshFromXtalSym(G,(ObjectMesh*)origObj,mapObj,
                                            sele_obj->Symmetry,
                                            map_state,state,mn,mx,lvl,mesh_mode,
                                            carve,vert_vla,alt_lvl,quiet);
         } else {
+          obj = NULL;
+        }
+        if(!obj) {
           obj=(CObject*)ObjectMeshFromBox(G,(ObjectMesh*)origObj,mapObj,
                                           map_state,state,mn,mx,lvl,mesh_mode,
                                           carve,vert_vla,alt_lvl,quiet);
